193 - Improve menu bar to show correct on small screen size. ( https://italent.cloudapp.net:9443/ccm/web/projects/iTalent#action=com.ibm.team.workitem.viewWorkItem&id=193 )

--- a/italent/src/main/webapp/css/italent.css
+++ b/italent/src/main/webapp/css/italent.css
@@ -296,5 +296,21 @@ cite {
 .navbar_custom{
 	padding-top: 20px;
 	padding-left: 100px;
-	font-weight: bold
+	font-weight: bold;
+}
+
+.dropdown-menu a{
+	color: #999 !important;
+	font-weight: bold !important;
+}
+
+.dropdown_custom{
+	background-color: #222;
+}
+
+.dropdown_custom>li>a:hover {
+	color: #ffffff !important;
+	background-color: #000;
+	font-weight: bold;
+
 }
